--- a/home.css
+++ b/home.css
@@ -708,6 +708,8 @@ padding: 0 auto;
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto;
+
+  transition: .5s all;
 }
 .contact-btns {
   padding: 0.8rem;
@@ -775,7 +777,9 @@ padding: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
 }
+
 .cont-img
 {
    width:20rem;
@@ -810,6 +814,7 @@ padding: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .container-post-cards-wrapper
@@ -818,9 +823,9 @@ padding: 0 auto;
     flex-wrap: wrap;
     justify-content: space-around;
     width: 80%;
-    opacity: 0;
-    transform: translateY(130px);
-    transition: .5s all ease;
+ transform: translateY(100px);
+ transition: .5s all;
+ opacity: 0;
 }
 
 .heading-one-container:hover
